--- a/flavour-it-backend/package.json
+++ b/flavour-it-backend/package.json
@@ -35,6 +35,8 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/typeorm": "^7.1.4",
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^5.0.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
