--- a/flavour-it-backend/ormconfig.json
+++ b/flavour-it-backend/ormconfig.json
@@ -5,10 +5,10 @@
   "username": "root",
   "password": "P@ssword1",
   "database": "flavour_it",
-  "entities": ["dist/**/*.entity{.ts,.js}"],
+  "entities": ["src/**/*.entity{.ts,.js}"],
   "synchronize": false,
   "migrationsTableName": "db_migrations",
-  "migrations": ["dist/database/migrations/*{.ts,.js}"],
+  "migrations": ["src/database/migrations/*{.ts,.js}"],
   "cli": {
     "migrationsDir": "src/database/migrations"
   }
