--- a/flavour-it-frontend/package.json
+++ b/flavour-it-frontend/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-react": "7.21.2",
     "eslint-plugin-react-hooks": "4.1.2",
     "husky": "^4.3.0",
+    "lint-staged": "^10.5.3",
     "prettier": "2.1.2",
     "prettier-eslint": "11.0.0",
     "prettier-eslint-cli": "5.0.0"
