--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,18 +21,40 @@ services:
       - ../flavour-it-backend:/app
     ports:
       - 4000:4000
+    environment:
+      - APP_ENV=development
+      - APP_PORT=4000
+      - JWT_SECRET=superSecret1234
+      - EXPIRES_IN=86400s
+      - IGNORE_EXPIRATION=false
+      - DB_HOST=flavour-it-db
+      - DB_USERNAME=root
+      - DB_PASSWORD=P@ssword1
+      - DB_DATABASE=flavour_it
     restart: always
-  flavour-it-frontend:
+  migration:
     build:
       dockerfile: ./docker/Dockerfile.dev
-      context: ../flavour-it-frontend
-    volumes:
-      - /app/node_modules
-      - ../flavour-it-frontend:/app
-    ports:
-      - 3000:3000
+      context: ../flavour-it-backend
+    depends_on:
+      - flavour-it-db
+    command: sh -c "/wait && npm run migration:run"
     environment:
-      - CHOKIDAR_USEPOLLING=true
-    stdin_open: true
+      - WAIT_HOSTS=flavour-it-db:3306
+      - WAIT_HOSTS_TIMEOUT=300
+      - WAIT_SLEEP_INTERVAL=30
+      - WAIT_HOST_CONNECT_TIMEOUT=30
+  # flavour-it-frontend:
+  #   build:
+  #     dockerfile: ./docker/Dockerfile.dev
+  #     context: ../flavour-it-frontend
+  #   volumes:
+  #     - /app/node_modules
+  #     - ../flavour-it-frontend:/app
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true
+  #   stdin_open: true
 volumes:
   db_data: {}
