--- a/flavour-it-backend/docker/Dockerfile.dev
+++ b/flavour-it-backend/docker/Dockerfile.dev
@@ -6,6 +6,9 @@ COPY package*.json ./
 
 RUN npm install
 RUN npm install -g @nestjs/cli
+ENV WAIT_VERSION 2.7.2
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
+RUN chmod +x /wait
 
 COPY . .
 
