[FI-API] CHANGE typeorm to prisma

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,34 +27,19 @@ services:
       - JWT_SECRET=superSecret1234
       - EXPIRES_IN=86400s
       - IGNORE_EXPIRATION=false
-      - DB_HOST=flavour-it-db
-      - DB_USERNAME=root
-      - DB_PASSWORD=P@ssword1
-      - DB_DATABASE=flavour_it
+      - DATABASE_URL=mysql://root:P@ssword1@flavour-it-db:3306/flavour_it
     restart: always
-  migration:
+  flavour-it-frontend:
     build:
       dockerfile: ./docker/Dockerfile.dev
-      context: ../flavour-it-backend
-    depends_on:
-      - flavour-it-db
-    command: sh -c "/wait && npm run migration:run"
+      context: ../flavour-it-frontend
+    volumes:
+      - /app/node_modules
+      - ../flavour-it-frontend:/app
+    ports:
+      - 3000:3000
     environment:
-      - WAIT_HOSTS=flavour-it-db:3306
-      - WAIT_HOSTS_TIMEOUT=300
-      - WAIT_SLEEP_INTERVAL=30
-      - WAIT_HOST_CONNECT_TIMEOUT=30
-  # flavour-it-frontend:
-  #   build:
-  #     dockerfile: ./docker/Dockerfile.dev
-  #     context: ../flavour-it-frontend
-  #   volumes:
-  #     - /app/node_modules
-  #     - ../flavour-it-frontend:/app
-  #   ports:
-  #     - 3000:3000
-  #   environment:
-  #     - CHOKIDAR_USEPOLLING=true
-  #   stdin_open: true
+      - CHOKIDAR_USEPOLLING=true
+    stdin_open: true
 volumes:
   db_data: {}
