--- a/flavour-it-backend/docker/Dockerfile.dev
+++ b/flavour-it-backend/docker/Dockerfile.dev
@@ -3,9 +3,11 @@ FROM node:alpine
 WORKDIR /app
 
 COPY package*.json ./
+COPY prisma ./prisma/
 
 RUN npm install
 RUN npm install -g @nestjs/cli
+RUN npx prisma generate
 ENV WAIT_VERSION 2.7.2
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
 RUN chmod +x /wait
