--- a/flavour-it-backend/package.json
+++ b/flavour-it-backend/package.json
@@ -13,16 +13,15 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:run": "./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:run",
-    "migration:generate": "./node_modules/.bin/ts-node ./node_modules/typeorm/cli.js migration:generate -n",
-    "migration:revert": "typeorm migration:revert"
+    "migration": "npx prisma migrate dev --preview-feature",
+    "reset:db": "npx prisma migrate reset --preview-feature",
+    "studio": "npx prisma studio"
   },
   "husky": {
     "hooks": {
@@ -37,7 +36,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.0",
-    "@nestjs/typeorm": "^7.1.4",
+    "@prisma/client": "^2.15.0",
     "@types/bcrypt": "^3.0.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
@@ -49,13 +48,13 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.1.4",
-    "typeorm": "^0.2.26"
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@prisma/cli": "^2.15.0",
     "@types/express": "^4.17.8",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
