--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,17 +29,17 @@ services:
       - IGNORE_EXPIRATION=false
       - DATABASE_URL=mysql://root:P@ssword1@flavour-it-db:3306/flavour_it
     restart: always
-  flavour-it-frontend:
-    build:
-      dockerfile: ./docker/Dockerfile.dev
-      context: ../flavour-it-frontend
-    volumes:
-      - /app/node_modules
-      - ../flavour-it-frontend:/app
-    ports:
-      - 3000:3000
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    stdin_open: true
+  # flavour-it-frontend:
+  #   build:
+  #     dockerfile: ./docker/Dockerfile.dev
+  #     context: ../flavour-it-frontend
+  #   volumes:
+  #     - /app/node_modules
+  #     - ../flavour-it-frontend:/app
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true
+  #   stdin_open: true
 volumes:
   db_data: {}
