--- a/flavour-it-backend/package.json
+++ b/flavour-it-backend/package.json
@@ -29,6 +29,7 @@
     }
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.5.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -38,10 +39,13 @@
     "@nestjs/swagger": "^4.6.0",
     "@prisma/client": "^2.15.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/nodemailer": "^6.4.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "handlebars": "^4.7.6",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
