[FI] Test git config

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,15 +12,15 @@ services:
       MYSQL_PASSWORD: P@ssword1
     ports:
       - 3306:3306
-  # flavour-it-backend:
-  #   build:
-  #     dockerfile: ./docker/Dockerfile.dev
-  #     context: ../flavour-it-backend
-  #   volumes:
-  #     - /app/node_modules
-  #     - ../flavour-it-backend:/app
-  #   ports:
-  #     - 4000:4000
+  flavour-it-backend:
+    build:
+      dockerfile: ./docker/Dockerfile.dev
+      context: ../flavour-it-backend
+    volumes:
+      - /app/node_modules
+      - ../flavour-it-backend:/app
+    ports:
+      - 4000:4000
   #   environment:
   #     - APP_ENV=development
   #     - APP_PORT=4000
